# safire

./: .gitignore  Dockerfile  README.md  README.rst  pyproject.toml  requirements.txt  safire.ipynb  setup.py
safire/: config.py  default_config.py  safire  safire.py  utils.py
safire/lib/: utils.py
